<resources>
    <string name="app_name">GAPSIProyect</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description_title">Descripción</string>
    <string name="name_title">Movie</string>
    <string name="first_button_title">Info</string>
    <string name="second_button_title">Save</string>
    <string name="resultrequestimage">ResultRequestImage</string>
    <string name="home">Home</string>
    <string name="Save">Saved</string>
    <string name="location">Location</string>
</resources>