<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dataItem"
            type="com.example.gapsiproyect.daos.Results" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/baseCardView"
        android:theme="@style/base_cardview"
        app:strokeColor="#D0D0D0"
        app:strokeWidth="1dp"
        app:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="@dimen/padding_xlarge"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            >

            <ImageView
                android:id="@+id/img_productImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/padding_standar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                android:src="@drawable/noimage"
                tools:src="@drawable/noimage"
                android:contentDescription="@string/resultrequestimage" />


            <TextView
                android:id="@+id/txt_productName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name_title"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/TextInfoCardView_xxlarge"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_productImage" />

            <TextView
                android:id="@+id/txt_Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_productName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/padding_small"
                android:textStyle="bold"
                android:textSize="@dimen/TextInfoCardView_xxxlarge"
                tools:text="What IF"
                android:text="@{dataItem.originalTitle}"
                android:textColor="@color/StrongBlue"
                />


            <TextView
                android:id="@+id/txt_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_Name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/padding_small"
                android:textStyle="normal"
                android:textSize="@dimen/TextInfoCardView_xxlarge"
                android:text="@string/description_title"
                android:textColor="@color/teal_700"
                />




            <TextView
                android:id="@+id/txt_descriptiontVale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/padding_small"
                android:textStyle="bold"
                android:textSize="@dimen/TextInfoCardView_large"
                tools:text="Liberty, a socially awkward 16-year-old, returns from two months at camp to a blindsided introduction of her mother’s fiancé, John Smith, whose charm, intelligence, and beauty paint the picture of a man too perfect to be human."
                android:text="@{dataItem.overview}"
                android:textColor="@color/StrongBlue"
                />




            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/showmore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_standar"
                tools:text="Info"
                app:layout_constraintTop_toBottomOf="@id/txt_descriptiontVale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/savemovie"
                android:text="@string/first_button_title"
                style="?attr/borderlessButtonStyle"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/savemovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_standar"
                tools:text="Save"
                app:layout_constraintTop_toBottomOf="@id/txt_descriptiontVale"
                app:layout_constraintStart_toEndOf="@id/showmore"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/second_button_title"
                style="?attr/borderlessButtonStyle"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
